fixed flutter login logic to accomodate for the new changes in backend